# liars_poker

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/exp/: fsp_k2_demo.yaml
liars_poker/: __init__.py  br.py  core.py  env.py  eval.py  fsp.py  infoset.py  logging.py  policy.py  serialization.py  simple_api.py
liars_poker/algo/: __init__.py  br_exact.py  br_exact_dense_new.py  br_exact_dense_to_dense.py  br_exact_efficient.py  br_exact_efficient_old.py  br_fitted_return.py  br_fitted_return_action_conditioned.py  br_mc.py  br_neural.py  br_ppo.py  cfr_exact_dense.py  cfr_external_sampling_dense.py  cfr_plus_dense.py  deep_cfr.py  deep_cfr_diagnostics.py  deep_cfr_plus.py  neural_cfr_batched.py  neural_cfr_gpu.py  neural_fsp.py  (+4 more)
notebooks/: playing_around_3.ipynb  playing_around_4.ipynb  playing_around_5.ipynb
scripts/: lp-train  play_human.py  run_cfr_plus_69_claim_adaptive.py  run_cfr_plus_69_claim_branch_forks.py  run_cfr_plus_69_claim_overnight.py  run_cfr_plus_snapshot_brs.py  run_fsp.py
tests/: conftest.py  test_br_annotations.py  test_commit_once_posterior.py  test_infoset.py  test_infoset_basics.py  test_mixing.py  test_p1_always_starts.py  test_policy_storage.py  test_repro.py  test_rules.py  test_run_manager_logging.py  test_serialization.py  test_suit_symmetry.py
visuals/: new_policy_explorer.py  play_human_better.py  play_human_vision_1_calculator.py  play_human_vision_2_drawer.py  play_human_vision_3_command_palette.py  play_human_vision_4_table_timeline.py  play_human_vision_5_matrix_wall.py  play_ui_common.py  policy_explorer.py
(+295 files in other folders)
